forget to upload in git hehe

--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -208,6 +208,27 @@
     "\n",
     "print(\"✅ 已保存为 umexpert_output.txt\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5629e10e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$2b$12$MxJabHnhPvEH7MOp8MhwTO8CMDJmD/rLZPywuMYg/NlYjuh8pXhMC\n"
+     ]
+    }
+   ],
+   "source": [
+    "from passlib.context import CryptContext\n",
+    "\n",
+    "pwd_context = CryptContext(schemes=[\"bcrypt\"], deprecated=\"auto\")\n",
+    "print(pwd_context.hash(\"i3#GZqR7\"))\n"
+   ]
   }
  ],
  "metadata": {
