--- a/test/documentsRAG.ipynb
+++ b/test/documentsRAG.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "391f5c3e",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "3f267520",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "18ebaf8c",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "39a86241",
    "metadata": {},
    "outputs": [
@@ -132,16 +132,17 @@
     "supabase: Client = create_client(url, key)\n",
     "\n",
     "for i, emb in enumerate(chunk_embeddings):\n",
-    "    supabase.table(\"embeddings\").insert({\n",
+    "    supabase.table(\"test_embeddings\").insert({\n",
     "        \"content\": chunks[i],\n",
     "        \"embedding\": emb,  # pgvector expects list\n",
-    "        \"chunk_index\": i  \n",
+    "        \"chunk_index\": i ,\n",
+    "        \"admin_id\": \"1ce7d7a9-e88d-4584-8881-24f1ca108fc0\"\n",
     "    }).execute()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "0b28455c",
    "metadata": {},
    "outputs": [
@@ -162,7 +163,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
     "import requests\n",
     "\n",
     "def get_ollama_embeddings_query(query):\n",
@@ -177,7 +177,7 @@
     "user_query = \"How to register dissertation course in MSE ST?\"\n",
     "query_embedding = get_ollama_embeddings_query(user_query)\n",
     "\n",
-    "response = supabase.rpc(\"match_embeddings\", {\n",
+    "response = supabase.rpc(\"match_test_embeddings\", {\n",
     "    \"query_embedding\": query_embedding,\n",
     "    \"match_count\": 5\n",
     "}).execute()\n",
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "7cfaf5b3",
    "metadata": {},
    "outputs": [
@@ -214,32 +214,17 @@
       "\n",
       "📘 Answer from Ollama:\n",
       "\n",
-      "According to the context provided, to register for the Dissertation course in the Master of Software Engineering (Software Technology) program, a student must:\n",
+      "To register for the Dissertation Course in the Master of Software Engineering (MSE) program, you need to follow these steps:\n",
       "\n",
-      "1. Fulfill the prerequisite requirements: \n",
-      "   - Have passed any two courses (6 credits) (excluding language courses).\n",
-      "   - Have taken or are taking WOX7001 Research Methodology.\n",
+      "1. Fulfill the pre-requisites of the Dissertation Course: Pass any two courses (6 credits) excluding language courses and complete the Research Methodology course (WOX7001).\n",
+      "2. Register for the Dissertation Course in every subsequent semester as long as you have not submitted your final dissertation for Senate approval or obtained approval from the faculty to withdraw from the program.\n",
+      "3. Before registering, consider whether you can cope with conducting research for your dissertation while taking other courses.\n",
+      "4. In your first semester of registration, appoint a supervisor for your dissertation and submit the \"Appointment of Supervisor Form\" by the stipulated deadline (usually no later than the 7th week of the semester).\n",
+      "5. The form must be emailed to Mrs. Rohani Mohamed Arifin (ani_e@um.edu.my) with the supervisor's approval and signature.\n",
+      "6. Propose a dissertation title, either from vetted or potential titles, and submit an MSE(ST) Dissertation Title Form for review by your supervisor and the MSE(ST) coordinator.\n",
+      "7. Submit the MSE(ST) Dissertation Title Form to get feedback from the title vetting committee.\n",
       "\n",
-      "2. After registering to take the Dissertation course for the first time, the student must register for it in every subsequent semester as long as they have not submitted their final dissertation for Senate approval or obtained approval from the faculty for withdrawing from the program that semester.\n",
-      "\n",
-      "3. Before registering for the Dissertation course, students should consider whether they can cope with conducting research for their dissertation while taking other courses.\n",
-      "\n",
-      "4. To officially register for the Dissertation course, a student must:\n",
-      "   - Appoint a supervisor for their dissertation in the first semester they register for the Dissertation course.\n",
-      "   - Submit the “Appointment of Supervisor Form” to the faculty’s Postgraduate Office by the stipulated deadline (usually no later than the 7th week of a semester).\n",
-      "   - Get the respective supervisor’s approval and signature before emailing the form to the staff, Mrs. Rohani Mohamed Arifin (ani_e@um.edu.my), to keep her informed.\n",
-      "\n",
-      "5. Students can propose their dissertation title by:\n",
-      "   - Proposing titles through the vetting committee. \n",
-      "     a. Proposed by lecturers: Will be published at the start of each semester. \n",
-      "       i. Two types of titles: Vetted titles and Potential titles. \n",
-      "         1) Vetted titles – titles with description that have been vetted by the title vetting committee.\n",
-      "           ii) Potential titles – titles without description that have not been vetted by the title vetting committee.\n",
-      "     b. Proposed by students: The student must discuss their title with their respective SE lecturer and prepare a description of the title by filling up the MSE(ST) Dissertation Title Form with the help of their supervisor.\n",
-      "\n",
-      "6. For cross-disciplinary research, the main supervisor must be from the Department of Software Engineering, and a co-supervisor from another department can be appointed if necessary, subject to faculty approval.\n",
-      "\n",
-      "7. To find detailed information about how to propose a dissertation title, refer to the MSE(ST) Dissertation Title Form or https://fsktm.um.edu.my/postgraduate, specifically looking for \"Thesis/Dissertation\", \"MSE Dissertation Titles\".\n"
+      "It is essential to note that you should regularly monitor your siswa email account and the MSE students mailing list (fsktm_mse-list@um.edu.my or your UM student email address) for important information and updates on the Dissertation Course.\n"
      ]
     }
    ],
