--- a/test/documentsRAG.ipynb
+++ b/test/documentsRAG.ipynb
@@ -84,14 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "18ebaf8c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "\n",
-    "def get_ollama_embeddings(chunks):\n",
+    "def get_embeddings(chunks):\n",
     "    chunk_embeddings = []\n",
     "    for chunk in chunks:\n",
     "        res = requests.post(\"http://localhost:11434/api/embeddings\", json={\n",
@@ -103,7 +103,7 @@
     "        chunk_embeddings.append(embedding)\n",
     "    return chunk_embeddings\n",
     "\n",
-    "chunk_embeddings = get_ollama_embeddings(chunks)"
+    "chunk_embeddings = get_embeddings(chunks)"
    ]
   },
   {
@@ -257,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
