--- a/test/umexpert.ipynb
+++ b/test/umexpert.ipynb
@@ -253,7 +253,7 @@
    "source": [
     "import requests\n",
     "\n",
-    "def get_ollama_embeddings(chunks):\n",
+    "def get_embeddings(chunks):\n",
     "    chunk_embeddings = []\n",
     "    for chunk in chunks:\n",
     "        res = requests.post(\"http://localhost:11434/api/embeddings\", json={\n",
@@ -265,7 +265,7 @@
     "        chunk_embeddings.append(embedding)\n",
     "    return chunk_embeddings\n",
     "\n",
-    "chunk_embeddings = get_ollama_embeddings(chunks)\n"
+    "chunk_embeddings = get_embeddings(chunks)\n"
    ]
   },
   {
